Use KIO::Overwrite when saving a changed file otherwise it always fails.

BUG:347760
REVIEW:124163